--- a/.gitignore
+++ b/.gitignore
@@ -104,11 +104,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.idea
 env/
 venv/
+idea/
 ENV/
 env.bak/
 venv.bak/
+idea.bak/
 node_modules
 
 # Spyder project settings
